# devops-with-kubernetes

./: .gitignore  README.md
daily-todo/: Dockerfile  script.sh
daily-todo/manifests/: cronjob.yaml
main-application/app-response/: Cargo.toml
main-application/app-response/src/: main.rs
main-application/manifests/: configmap.yaml  deployment.yaml  ingress.yaml  persistentvolume.yaml  service.yaml
part1/app1/: Cargo.toml  Dockerfile
part1/app1/app-response/: Cargo.toml  Dockerfile
part1/app1/app-response/src/: main.rs
part1/app1/manifests/: deployment.yaml  ingress.yaml  service.yaml
part1/app1/src/: main.rs
part1/app1/timestamper/: Cargo.toml  Dockerfile
part1/app1/timestamper/src/: main.rs
part1/app2/: Cargo.toml  Dockerfile
part1/app2/manifests/: deployment.yaml  ingress.yaml  service.yaml
part1/app2/src/: main.rs
part1/app3/: Cargo.toml  Dockerfile
part1/app3/manifests/: deployment.yaml
part1/app3/src/: main.rs
part1/main-application/app-response/: Cargo.toml  Dockerfile
part1/pingpong/: Cargo.toml
part1/todo-app/: Cargo.toml  Dockerfile
part1/todo-app/manifests/: deployment.yaml
part1/todo-app/src/: main.rs
part1/todo-app/templates/: index.tera
pingpong/: Cargo.toml  Dockerfile
pingpong/manifests/: database-dep.yaml  database-svc.yaml  deployment.yaml  sealedsecret.yaml  service.yaml
pingpong/src/: main.rs
todo-app/: Cargo.toml  Dockerfile  Rocket.toml
todo-app/manifests/: deployment.yaml  ingress.yaml  service.yaml
todo-app/src/: main.rs
todo-app/templates/: index.tera
todo-app/todo-frontend/: Cargo.toml
todo-service/: Cargo.toml  Dockerfile
todo-service/manifests/: database-dep.yaml  database-svc.yaml  deployment.yaml  sealedsecret.yaml  service.yaml
todo-service/src/: main.rs
(+7 files in other folders)
