[package]
name = "todo-service"
version = "0.1.0"
authors = ["Tapani Honkanen <tapani.honkanen@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = "0.4.6"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
postgres = "0.19.0"
