[package]
name = "app1"
version = "0.1.0"
authors = ["Tapani Honkanen <tapani.honkanen@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
uuid = { version = "0.4", features = ["v4"] }
rocket = "0.4.6"
lazy_static = "1.4.0"
