[package]
name = "todo-app"
version = "0.2.0"
authors = ["Tapani Honkanen <tapani.honkanen@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
lazy_static = "1.4.0"
reqwest = { version = "0.10", features = ["blocking"] }
bytes = "0.5.6"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["tera_templates"]